# os-kernel

./: CMakeLists.txt  README.md
include/: atomic.h  generic.h  idle.h  irq.h  list.h  mutex.h  os.h  print.h  scheduler.h  thread.h  tick.h  timer.h
src/: atomic.c  idle.c  init.c  irq.c  list.c  mutex.c  os.c  print.c  scheduler.c  thread.c  tick.c  timer.c  version.c
